# FieldNotes

./: .gitignore  00_MASTER_PROMPT.md  03_SETUP_ENVIRONMENT.md  04_AUDIO_MODULE.md  07_DRIVE_SYNC_MODULE.md  08_UI_MODULE.md  BUILD_NOTES.md  CLAUDE.md  DRIVE_AUTH.md  FUTURE_WORK.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/fieldnotes/app/: HiltTestRunner.kt  RecorderScreenTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/com/fieldnotes/app/: FieldNotesApplication.kt  MainActivity.kt  OAuthCallbackActivity.kt
app/src/main/java/com/fieldnotes/app/core/audio/: AudioEncoder.kt  AudioInputRouter.kt  AudioRecorder.kt  RecordingMode.kt  RecordingSessionManager.kt
app/src/main/java/com/fieldnotes/app/core/storage/: LocalFileManager.kt  LocalFolderNoteWriter.kt  MarkdownManager.kt
app/src/main/java/com/fieldnotes/app/core/sync/: DriveAuthManager.kt  DriveSync.kt  FieldNotesCredentialStore.kt  NoteImporter.kt  SyncScheduler.kt  SyncStatus.kt  SyncWorker.kt
app/src/main/java/com/fieldnotes/app/core/whisper/: TranscriptionManager.kt  TranscriptionResult.kt  WhisperEngine.kt  WhisperModelManager.kt
app/src/main/java/com/fieldnotes/app/data/db/: Daos.kt  Entities.kt  FieldNotesDatabase.kt  Labels.kt
app/src/main/java/com/fieldnotes/app/data/repository/: NoteRepository.kt  RecordingRepository.kt  SettingsRepository.kt  TranscriptionRepository.kt
app/src/main/java/com/fieldnotes/app/di/: DatabaseModule.kt
app/src/main/java/com/fieldnotes/app/service/: RecordingService.kt  TranscriptionService.kt
app/src/main/java/com/fieldnotes/app/ui/: AppChromeViewModel.kt  FieldNotesApp.kt
app/src/main/java/com/fieldnotes/app/ui/common/: AudioPlayer.kt  Color.kt  LabelEditor.kt  SyncStatusIcon.kt  Theme.kt  TranscriptionBanner.kt  WaveformView.kt
app/src/main/java/com/fieldnotes/app/ui/notes/: NoteViewScreen.kt
app/src/main/java/com/fieldnotes/app/ui/recorder/: RecorderScreen.kt  RecorderViewModel.kt
app/src/main/java/com/fieldnotes/app/ui/recordings/: LibraryScreen.kt  RecordingDetailScreen.kt  RecordingsViewModel.kt
app/src/main/java/com/fieldnotes/app/ui/settings/: SettingsScreen.kt  SettingsViewModel.kt
app/src/main/java/com/fieldnotes/app/ui/transcription/: TranscriptionScreen.kt  TranscriptionViewModel.kt
app/src/main/java/com/fieldnotes/app/widget/: RecordFieldQuickSettingsTile.kt  RecordQuickSettingsTile.kt  RecordTileService.kt  RecordWidget.kt  RecordWidgetActionActivity.kt  RecordWidgetReceiver.kt
app/src/main/res/drawable/: ic_launcher.xml  ic_mic.xml  ic_stop.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: record_widget_info.xml
app/src/test/java/com/fieldnotes/app/core/storage/: LocalFileManagerTest.kt  MarkdownManagerTest.kt
app/src/test/java/com/fieldnotes/app/data/db/: LabelsTest.kt  SyncQueueTest.kt
gradle/: libs.versions.toml
planning/: 01_PROJECT_OVERVIEW.md  02_ARCHITECTURE.md  05_WHISPER_MODULE.md  06_STORAGE_MODULE.md  09_WIDGET_MODULE.md  10_TESTING_PLAN.md  11_GOOGLE_CLOUD_SETUP.md
